--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>TwitterRedesign</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
+<head>
+  <title>TwitterRedesign</title>
+  <%= csrf_meta_tags %>
+  <%= csp_meta_tag %>
 
-  <body>
-    <%= if flash[:notice] %>
-      <div class = "notification is-primary global-notification">
-        <p class = "notice"><%= notice %></p>
-      </div>
-    <% end %>
+  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+  <%= stylesheet_link_tag "https://maxcdn.bootstrapcdn/font-awesome/4.7.0/css/font-awesome.min.css" %>
+  <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+</head>
 
-    <%= if flash[:alert] %>
-      <div class = "notification is-danger global-notification">
-        <p class = "alert"><%= alert %></p>
-      </div>
-    <% end %>
-    <%= yield %>
-  </body>
-</html>
+<body>
+
+  <% if flash[:notice] %>
+  <div class="notification is-primary global-notification">
+    <p class="notice"><%=notice%></p>
+  </div>
+  <% end %>
+  <%if flash[:alert]%>
+  <div class="notification is-danger global-notification">
+    <p class="alert"> <%= alert %> </p>
+  </div>
+  <% end %>
+
+  <%= render "layouts/navbar" %>
