--- a/app/views/tweeets/_feed.html.erb
+++ b/app/views/tweeets/_feed.html.erb
@@ -3,11 +3,11 @@
   <article class="media box">
     <figure class="media-left">
       <p class="image is-64x64">
-        <%=gravatar_image_tag(current_user.email,size:64,alt:current_user.name)%>
+        <%=gravatar_image_tag(current_user.email, size: 64, alt: current_user.name)%>
       </p>
     </figure>
     <div class="media-content">
-      <%= render 'form' %>
+      <%= render 'tweeets/form' %>
     </div>
   </article>
   <%end%>
@@ -17,7 +17,7 @@
     <article class="media">
       <div class="media-left">
         <figure class="image is-64x64">
-           <%= gravatar_image_tag(tweeet.user.email,size:64,alt: tweeet.user.name)%>
+           <%= gravatar_image_tag(tweeet.user.email, size: 64, alt: tweeet.user.name)%>
         </figure>
       </div>
       <div class="media-content">
