--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,5 +1,6 @@
 <nav class="navbar is-info">
   <div class="container">
+  <%= render "layouts/aside-section" %>
     <div class="navbar-brand">
       <%= link_to root_path, class: 'navbar-item' do %>
 
@@ -40,3 +41,4 @@
     </div>
   </div>
 </nav>
+
