--- a/app/views/layouts/_aside-section.html.erb
+++ b/app/views/layouts/_aside-section.html.erb
@@ -1,23 +1,33 @@
-<div>
-<aside class="menu">
-<div id="navbarMenuHeroA" class="navbar-menu">
-          <div class="navbar-start">
-            <a class="navbar-item is-active">
-              Home
-            </a>
-            <a class="navbar-item">
-              Examples
-            </a>
-            <a class="navbar-item">
-              Documentation
-            </a>
-            <span class="navbar-item">
-              <a class="button is-primary is-inverted">
-                <span class="icon">
-                  <i class="fab fa-github"></i>
-                </span>
-                <span>Download</span>
-              </a>
-            </span>
-          </div>
-        </div>
+<div class="sidenav">
+    <ul>
+      <li>
+        <a href="#">
+        <h1 class = "links">HOME</h1>
+        </a>
+      </li>
+  
+      <li>
+        <a href="#">
+        <h1 class = "links">CONNECT</h1>
+        </a>
+      </li>
+   
+      <li>
+        <a href="#">
+        <h1 class = "links">DISCOVER</h1>
+        </a>
+      </li>
+
+      <li>
+        <a href="#">
+        <h1 class = "links">PROFILE</h1>
+        </a>
+      </li>
+
+      <li>
+        <a href="#">
+        <h1 class = "links">STATISTICS</h1>
+        </a>
+      </li>
+    </ul>
+</div>
