change notifation color

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,8 +14,9 @@
 
 <body>
 
+
   <% if flash[:notice] %>
-  <div class="notification is-primary global-notification">
+  <div class="notification is-primary is-light global-notification">
     <p class="notice"><%=notice%></p>
   </div>
   <% end %>
