--- a/app/views/layouts/_aside-section.html.erb
+++ b/app/views/layouts/_aside-section.html.erb
@@ -1,29 +1,34 @@
 <div class="sidenav">
+<%= render "profile" %>
     <ul>
       <li>
         <a href="#">
-        <h1 class = "links">HOME</h1>
+          <h1 class = "links">HOME</h1>
         </a>
       </li>
+      <br>
   
       <li>
         <a href="#">
         <h1 class = "links">CONNECT</h1>
         </a>
       </li>
-   
+      <br>
+
       <li>
         <a href="#">
         <h1 class = "links">DISCOVER</h1>
         </a>
       </li>
-
+      <br>
       <li>
         <a href="#">
         <h1 class = "links">PROFILE</h1>
         </a>
       </li>
 
+      <br>
+      
       <li>
         <a href="#">
         <h1 class = "links">STATISTICS</h1>
