--- a/app/views/layouts/_main-section.html.erb
+++ b/app/views/layouts/_main-section.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
         <div>
-            <div>
+            <div class = "column">
                 <%= render "layouts/aside-section" %>        
             </div>
             <div class="column main-content"> 
