fix dispaly error

--- a/app/views/tweeets/index.html.erb
+++ b/app/views/tweeets/index.html.erb
@@ -2,8 +2,10 @@
   <div class="container">
     <div class="columns">
     <% if user_signed_in? %>
-    <%= render 'feed' %>
+    <%= render 'profile' %>
     <% end %>
+    <%= render 'feed' %>
+    
     </div>
   </div>
 </section>
