--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,20 +11,24 @@
   <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
 </head>
 
-<body>
+  <body>
+    <% if flash[:notice] %>
+    <div class="notification is-primary is-light global-notification">
+      <p class="notice"><%=notice%></p>
+    </div>
+    <% end %>
+    <%if flash[:alert]%>
+    <div class="notification is-danger global-notification">
+      <p class="alert"> <%= alert %> </p>
+    </div>
+    <% end %>
 
+    <%= render "layouts/navbar" %>
 
-  <% if flash[:notice] %>
-  <div class="notification is-primary is-light global-notification">
-    <p class="notice"><%=notice%></p>
-  </div>
-  <% end %>
-  <%if flash[:alert]%>
-  <div class="notification is-danger global-notification">
-    <p class="alert"> <%= alert %> </p>
-  </div>
-  <% end %>
+   
+    
+  
+    <%= yield %>
 
-  <%= render "layouts/navbar" %>
- 
-  <%= yield %>
+  </body>  
+</html>  
