--- a/app/views/tweeets/_feed.html.erb
+++ b/app/views/tweeets/_feed.html.erb
@@ -1,4 +1,5 @@
 <div class="column is-three-quaters">
+<%= render 'aside-section'%>
   <% if user_signed_in?%>
   <article class="media box">
     <figure class="media-left">
@@ -57,8 +58,4 @@
   </div>
   <% end %>
 
-</div>
-
-<div>
-<%= render "who_to_follow" %>
 </div>
