--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,7 +24,9 @@ body {
   font-family: 'Inter', sans-serif;
 }
 
-
+.white{
+  color: #929EAC;
+}
  .logo {
    padding-left: 20px;
  }
@@ -55,24 +57,25 @@ body {
 
   .sidenav {
     height: 100%;
-    width: 200px;
+    width: 180px;
     position: fixed;
     z-index: 1;
     top: 0;
     left: 0;
-    background-color: #1F2937;
+    background-color: #213246;
     overflow-x: hidden;
     padding-top: 20px;
   }
 
   .links{
     padding: 5px;
-    color: #ffffff;
+    display: flex;
   }
 
   .links:hover {
-    background-color: black;
+    background-color: #4E9AD6;
   }
+
   .main {
     margin-left: 180px; /* Same as the width of the sidenav */
     padding: 0px 10px;
@@ -83,8 +86,14 @@ body {
     margin-left: 180px;
   }
 
-  .profile-links {
+  .sidebar-links {
     color: #ffff;
+    padding-right: 20px;
+
+  }
+
+  .sidebar-icons{
+  display: flex
   }
   
   .tweet-field {
