--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -18,16 +18,6 @@
 
         <div class="field">
           <div class="control">
-            <%= f.input :username,
-                required: true,
-                autofocus: true, input_html: { class: "input" }, wrapper:false,
-                label_html: {class:"label"}
-                %>
-
-          </div>
-        </div>
-        <div class="field">
-          <div class="control">
             <%= f.input :email,
                 required: true,
                 autofocus: true, input_html: { class: "input" }, wrapper:false,
@@ -48,6 +38,22 @@
           required: true,
           input_html: { class: "input" }, wrapper:false, label_html: {class:"label"} %>
           </div>
+        </div>
+
+        <div class = "field">
+         <div class = "control">
+          <%=f.input :photo, as: :file,
+          required: true,
+          input_html: { class: "input" }, wrapper:false, label_html: {class:"label"} %>
+         </div>
+        </div>
+
+         <div class = "field">
+         <div class = "control">
+          <%=f.input :cover_image, as: :file,
+          required: true,
+          input_html: { class: "input" }, wrapper:false, label_html: {class:"label"} %>
+         </div>
         </div>
 
         <div class="field">
