--- a/app/views/tweeets/index.html.erb
+++ b/app/views/tweeets/index.html.erb
@@ -2,9 +2,10 @@
   <div class="container">
     <div class="columns">
     <% if user_signed_in? %>
-    <%= render 'profile' %>
+    <%= render 'aside-section'%>
     <% end %>
     <%= render 'feed' %>
+    <%= render 'who_to_follow' %>
     
     </div>
   </div>
