--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,141 +14,88 @@
  *= require_self
  */
  
- @import "bootstrap";
- @import "toastr/toastr";
+ @import "bulma";
 
  
  @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap');
  @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;500&display=swap');
 
-$blue-dark: #1c2a3d;
-$blue-sky: #57a8e5;
-$text-dark: #6c8297;
-$text-light: #fafcfc;
-$text-gray: #b3b4b6;
-$black: #000;
-
 body {
-  font-family: "Poppins", sans-serif;
+  font-family: 'Inter', sans-serif;
 }
 
-.text-gray {
-  color: $text-gray;
+.white{
+  color: #929EAC;
 }
+ .logo {
+   padding-left: 20px;
+ }
 
-.bg-custom-side {
-  background-color: $blue-dark !important;
-}
 
-.bg-gray {
-  background-color: $text-gray !important;
-}
-
-.bg-custom-top {
-  background-color: $blue-sky !important;
-}
-
-.sidebar-links {
-  transition: all 0.3s ease-in-out;
-
-  &__anchor {
-    color: $text-dark;
-    text-transform: uppercase;
-
-    &:hover {
-      text-decoration: none;
+.navbar-brand .title{
+    color: white;
+  }
+  
+  .image{
+    border-radius: 50%;
+    img {
+      border-radius:50%
     }
   }
-
-  &__icon {
-    fill: $text-dark;
-    width: 20px;
-    height: 20px;
+  
+  .notification:not(:last-child){
+    margin-bottom: 0px ;
+    border-radius: 0;
+  }
+  
+  .feature__icon{
+    fill: white;
+    width: 5rem;
+    height: 5rem;
+    
   }
 
-  &:hover {
-    background-color: $blue-sky !important;
+  .sidenav {
+    height: 100%;
+    width: 180px;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #213246;
+    overflow-x: hidden;
+    padding-top: 20px;
   }
 
-  &:hover &__anchor,
-  &:hover &__icon {
-    color: $text-light;
-    fill: $text-light;
+  .links{
+    padding: 5px;
+    display: flex;
   }
-}
 
-.follow {
-  color: $text-light;
-  font-size: 11px;
-
-  small {
-    color: $text-dark;
+  .links:hover {
+    background-color: #4E9AD6;
   }
-}
 
-.actived {
-  background-color: $blue-sky !important;
-  color: $text-light !important;
-  fill: $text-light !important;
-}
-
-.follow-content {
-  width: 100%;
-}
-
-.who-to-follow {
-  .follow-content {
-    line-height: 1rem;
+  .main {
+    margin-left: 180px; /* Same as the width of the sidenav */
+    padding: 0px 10px;
   }
-}
 
-.profile-img {
-  transform: scale(1);
-  transition: all 0.4s;
-
-  &:hover {
-    transform: scale(1.1);
+  .navbar,
+  .notification {
+    margin-left: 180px;
   }
-}
 
-.side-photo {
-  width: 4rem;
-}
+  .sidebar-links {
+    color: #ffff;
+    padding-right: 20px;
 
-.side-profile-photo {
-  width: 8rem;
-}
-
-.cover_image {
-  width: 100%;
-  height: 250px;
-  overflow: hidden;
-
-  img {
-    width: 100%;
   }
-}
 
-.user-name-p {
-  color: $black;
-
-  &:hover {
-    color: $black;
+  .sidebar-icons{
+  display: flex
   }
-}
-
-.user-name {
-  color: $text-light;
-  font-size: 18px;
-  text-align: center;
-  transform: translateY(0);
-  text-shadow: 0 1px 2px rgba($color: $black, $alpha: 0.9);
-  transition: all 0.3s ease-in-out;
-
-  &:hover {
-    color: $text-light;
-    text-decoration: none;
-    text-shadow: 0 1px 1px rgba($color: $black, $alpha: 0.95);
-    transform: translateY(1px);
+  
+  .tweet-field {
+    margin: 0 auto;
   }
-}
