--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,11 +6,24 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => false  %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag "https://maxcdn.bootstrapcdn/font-awesome/4.7.0/css/font-awesome.min.css" %>
   </head>
 
   <body>
+
+     <% if flash[:notice] %>
+  <div class="notification is-primary is-light global-notification">
+    <p class="notice"><%=notice%></p>
+  </div>
+  <% end %>
+  <%if flash[:alert]%>
+  <div class="notification is-danger global-notification">
+    <p class="alert"> <%= alert %> </p>
+  </div>
+  <% end %>
+
     <%= yield %>
   </body>
 </html>
