--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,6 +15,7 @@
  */
 
 @import "bootstrap";
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap');
 
 $blue-dark: #1c2a3d;
 $blue-sky: #57a8e5;
@@ -24,8 +25,10 @@ $text-gray: #b3b4b6;
 $black: #000;
 
 body {
-  font-family: "Poppins", sans-serif;
+  font-family: "Inter", sans-serif;
 }
+
+
 
 .text-gray {
   color: $text-gray;
