--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
-<h3>Job Opinions</h3>
+<h3>Converse</h3>
 
 <div class="card mb-5">
     <div class="card-body">
@@ -10,7 +10,7 @@
 
 <div class="card">
     <div class="card-body">
-        <h5 class="card-title border-bottom pb-3">Job Hints</h5>
+        <h5 class="card-title border-bottom pb-3">Converse</h5>
         <%= render @opinions %>
     </div>
 </div>
