--- a/app/views/shared/_right-side.html.erb
+++ b/app/views/shared/_right-side.html.erb
@@ -27,9 +27,9 @@
 
     <h6 class="text-gray border-top border-bottom pt-3 pb-3 mt-3 mb-3">TRENDING</h6>
 
-    <p><a href="#" class="text-gray"> #remotework </a></p>
-    <p><a href="#" class="text-gray"> Education </a></p>
-    <p><a href="#" class="text-gray"> #blacklivesmatter </a></p>
-    <p><a href="#" class="text-gray"> Jacob Blake </a></p>
+    <p><a href="#" class="text-gray"> #InternationalWomensDay </a></p>
+    <p><a href="#" class="text-gray"> Technology </a></p>
+    <p><a href="#" class="text-gray"> #WomenInStem </a></p>
+    <p><a href="#" class="text-gray"> Ijay Abby </a></p>
     
 </div>
