Edit styling layout

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <div class="cover_image bg-gray mb-2" >
 <%= show_cover_image(@user) %>
  </div>
-<h2>Hints</h2>
+<h2>Conversations</h2>
 
 
 <div class="card mb-5">
